--- a/audio_plugins/_SPARTA_binauraliser_/make/MacOSX/Xcode/sparta_binauraliser.xcodeproj/xcshareddata/xcschemes/sparta_binauraliser - All.xcscheme
+++ b/audio_plugins/_SPARTA_binauraliser_/make/MacOSX/Xcode/sparta_binauraliser.xcodeproj/xcshareddata/xcschemes/sparta_binauraliser - All.xcscheme
@@ -33,7 +33,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -42,6 +42,11 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <PathRunnable
+         runnableDebuggingMode = "0"
+         BundleIdentifier = "com.cockos.reaper"
+         FilePath = "/Applications/REAPER64.app">
+      </PathRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
