updated SAF, and fixed all .jucer files

--- a/audio_plugins/_SPARTA_ambiBIN_/CMakeLists.txt
+++ b/audio_plugins/_SPARTA_ambiBIN_/CMakeLists.txt
@@ -101,4 +101,5 @@ target_compile_definitions(AudioPluginExample
 
 target_link_libraries(AudioPluginExample PRIVATE
     # AudioPluginData           # If we'd created a binary data target, we'd link to it here
+    saf
     juce::juce_audio_utils)
