--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.15)
 project(sparta_head)
 
 add_subdirectory(SDKs)
-#add_subdirectory(audio_plugins)
+add_subdirectory(audio_plugins)
